# opencode-workflow-kit

./: .ai-guardrails.yaml  .beads-cody-sync-state.json  .editorconfig  .gitignore  .npmrc  .prettierrc  AGENTS.md  ARCHITECTURE_EVOLUTION.md  BEADS-CODY-RECONCILIATION-COMPLETE.md  BEADS-CODY-SYNC-QUICKSTART.md  BEADS_HYGIENE_REPORT.md  BUN_MIGRATION_RESUME.md  CHANGELOG_v0.6.0.md  CI_CD_COMPLETION_REPORT.md  CI_CD_FIX_SUMMARY.md  CI_CD_QUICK_REFERENCE.md  CLAUDE.md  DOGFOODING_IMPLEMENTATION_REPORT.md  DOGFOODING_PLAN.md  GITHUB_PACKAGES.md  GIT_AUTOMATION_STATUS.md  INSTALL.md  MIGRATION_v0.6.0.md  PM2_IMPLEMENTATION_SUMMARY.md  PROJECT_ASSESSMENT.md  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.10.md  RELEASE_READY_v0.6.0.md  RELEASE_v0.6.0_SUMMARY.md  REVISIT_LATER.md  Taskfile-python.yml  Taskfile.yml  WORKFLOW_MONITORING.md  analyze_coverage.py  beads-cody-reconciliation-report.json  blog-post-v0.5.0-development-summary.md  calculate_coverage.py  check_coverage.sh  (+34 more)
.beads/: README.md  config.json  health-report.json  issues.jsonl  pm2-migration-report.json
.changeset/: changeset-20251208203741.md  docs-v060-updates.md  liaison-v060-refactor.md
.claude/: settings.local.json
.cody/: cleanup-plan.md  cleanup-summary.md
.test-github-cache/: export.json
agents/: cody-admin.json  cody-builder.json  cody-general.json  cody-planner.json  cody-planner.md  cody-release-manager.json  cody-version-manager.json  frontend-specialist.md  git-automation.json  git-automation.md  librarian-subagent.json  library-researcher.md  qa-subagent.json  security-subagent.json  technical-writer.md
cody-integration-plan/: README.md  commands-analysis.md  discovery.md  implementation-approach.md  plan.md  prd.md  subagent-configuration.md  summary.md  testing-strategy.md
docs/: ADVANCED_GIT_AUTOMATION.md  AGENT_ARCHITECTURE_DIAGRAM.md  AUTO_COMMIT_WORKFLOW.md  BD_ONBOARDING_SOLUTION.md  BEADS_TROUBLESHOOTING.md  CHANGESET_WORKFLOW.md  CLI_INTEGRATION_GUIDE.md  CODY_BUILD_AUTO_ADVANCE.md  CODY_INTEGRATION.md  DOGFOODING_WORKFLOW.md  ENHANCED_AGENT_ARCHITECTURE.md  HEADLESS_CHANGESET_WORKFLOW.md  HEALTH_CHECK_CONTRACT.md  INTEGRATION-TESTING.md  JUSTFILE_MODULARIZATION.md  LIBRARY_RESEARCH_SETUP.md  MIGRATION_GUIDE_v0.6.0.md  PM2_INTEGRATION.md  README.md  TASK_MANAGEMENT.md  TESTING.md  WORKTREE_CLEANUP.md  cody-refresh-workflow.md  configuration-structure.md  enhanced-system-documentation.md  usage-examples.md  usage-patterns.md  v0.5.0-architecture.md  v0.5.0-implementation-plan.md  v0.5.0-summary.md
examples/: README.md  cody-workflow-example.md
opencode_config/: __init__.py  cli.py  compatibility.py  tools.py  validator.py
schemas/: README.md  agent-config.json  mcp-servers.json  permissions.json  project-config.json  subagent-config.json
scripts/: README.md  TESTING_INFRASTRUCTURE.md  automated-sync.js  automated-sync.py  automated-sync.ts  bd-wrapper.sh  beads-cody-sync.py  beads-cody-sync.ts  bump-version.js  ci_workflow_tests.sh  cleanup-duplicates.py  cody-beads-adapter.py  cody-refresh  cody-refresh.ts  commit-automation.py  config-loader.py  config-validator.py  create-changeset.sh  demo-duplicate-prevention.py  duplicate-prevention.py  enable-library-research.sh  environment-manager.py  environment-templates.py  event-processor.py  get-next-task.py  get-next-task.sh  git-automation.py  git-hooks.py  health-check.py  health-check.sh  health-dashboard.sh  implement-beads-tasks.sh  install-automated-sync.py  install-cody-integration.py  install-git-hooks.py  install-integration-hooks.py  opencode-integration-test.py  parallel-beads-executor.sh  parallel-beads-liaison.sh  path-utils.py  (+44 more)
templates/: mac-keyboard-fix.json  minimal.json  python-development.json  web-development.json
test-plans/: cody-refresh-test-plan.md
test-project/: opencode.json
test-results/: anticipatory-testing-20251202_102816.json  anticipatory-testing-20251202_102939.json  anticipatory-testing-20251202_103046.json  anticipatory-testing-20251202_103254.json  anticipatory-testing-20251202_103705.json  (+46 more)
(+140 files in other folders)
