[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-config"
version = "0.2.0"
description = "A specialized agent suite and automation framework for AI-driven development workflows"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenCode Workflow Kit Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.14.2",
    "mypy>=1.14.1",
]

[project.scripts]
opencode-config = "opencode_config.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/opencode-config"
Repository = "https://github.com/your-username/opencode-config"
Issues = "https://github.com/your-username/opencode-config/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=opencode_config --cov-report=term-missing"

[dependency-groups]
dev = []
